[tool.poetry]
name = "openfortisaml"
version = "0.2.0"
description = ""
authors = ["Lucy Hancock <lucy@leh.dev>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pygobject = "^3.46.0"

[tool.poetry.scripts]
openfortisaml = "openfortisaml.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
